# pgweather

./: .dockerignore  .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  db_utils.py  fly.toml  preprocess_forecast.py  preprocess_icon.py  pyproject.toml  requirements.txt  takeoff_utils.py  utils.py  wind_station_utils.py
.github/workflows/: build-preprocess-image.yml  deploy.yml  preprocess_data.yml
assets/: map.css
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: AirgramChart.jsx  AirgramModal.jsx  BrandLogo.jsx  ForecastMap.jsx
frontend/src/hooks/: useAirgramSummary.js  useFrontendMeta.js  useMapPayload.js
frontend/src/lib/: api.js  nearest.js
frontend/tests/e2e/: app.spec.js  nearest.spec.js  screenshots.spec.js
src/preprocessing/: __init__.py  base.py  icon.py  meps.py
src/web/: __init__.py  config.py  dash_ui.py  forecast_service.py  main.py  models.py  preprocess_worker.py
