[project]
name = "pgweather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bottleneck>=1.4.2",
    "folium>=0.19.4",
    "geopandas>=0.10.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "metar>=1.8.0",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "pandas>=1.1.3",
    "plotly>=4.12.0",
    "python-dateutil>=2.8.1",
    "requests>=2.24.0",
    "scipy>=1.13.1",
    "shapely>=2.0.7",
    "siphon>=0.9",
    "streamlit-folium>=0.24.0",
    "streamlit>=0.85.1",
    "windrose>=1.9.2",
    "xarray>=2024.7.0",
    "nbformat>=5.10.4",
    "anywidget>=0.9.15",
    "polars>=1.24.0",
    "dotenv>=0.9.9",
    "adbc-driver-manager>=1.5.0",
    "adbc-driver-postgresql>=1.5.0",
]
